@@ -21,6 +21,9 @@
     - [RT #120450] Fix PDF::API2->open($filename)->stringify()
       (reported by SPROUT).
 
+    - Fix an off-by-one error when calculating text width while
+      charspace is non-zero.
+
 
 2.031     2017-01-26
 
